# GameConsole

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/: Soulcast.hpp  TestGame.cpp  TestGame.hpp
Engine/src/Emulator/: Emulator.cpp  Emulator.hpp  Memory.cpp  Memory.hpp  Scripting.cpp
Engine/src/Engine/Audio/: Audio.cpp  Audio.hpp
Engine/src/Engine/CPU/: CPU.cpp  CPU.hpp
Engine/src/Engine/Core/: Assert.hpp  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Emulator.cpp  Emulator.hpp  Engine.cpp  Engine.hpp  Filesystem.cpp  Filesystem.hpp  Math.hpp  Memory.cpp  Memory.hpp  Platform.cpp  Scripting.cpp  Scripting.hpp  SoulcastEngine.cpp  SoulcastEngine.hpp  Stream.cpp
Engine/src/Engine/Graphics/: Animation.hpp  Drawing.cpp  Drawing.hpp  PPU.cpp  PPU.hpp  Palette.cpp  Palette.hpp  Sprite.cpp  Sprite.hpp
Engine/src/Engine/Input/: Input.cpp  Input.hpp
Engine/src/Engine/Platform/: Filesystem.cpp  Platform.cpp  Platform.hpp  Stream.cpp  Stream.hpp
Engine/src/Engine/Scene/: Scene.cpp  Scene.hpp
Player/: CMakeLists.txt
Player/src/: main.cpp
SDK/: CMakeLists.txt
SDK/resources/: main.qrc  trinket.xml
SDK/resources/icons/: scene.psd
SDK/src/: AssetBrowser.cpp  AssetBrowser.hpp  CodeEditor.cpp  GameWindow.cpp  MainWindow.cpp  MainWindow.hpp  SDK.cpp  SDK.hpp  SDLKeymap.cpp  SDLKeymap.hpp  SDLRenderer.cpp  SDLRenderer.hpp  main.cpp  mainwindow.ui
SDK/src/SDK/: AssetBrowser.cpp  AssetBrowser.hpp  MainWindow.cpp  MainWindow.hpp  mainwindow.ui
SDK/src/SDK/SDL3/: SDLRenderer.cpp  SDLRenderer.hpp  SDLWindow.cpp  SDLWindow.hpp
SDK/src/SDK/Tools/: CodeEditor.cpp  CodeEditor.hpp  MusicEditor.cpp  MusicEditor.hpp  PaletteEditor.cpp  PaletteEditor.hpp  codeeditor.ui  musiceditor.ui  paletteeditor.ui
SDK/src/SDK/Widgets/: GameWindow.cpp  GameWindow.hpp  gamewindow.ui
src/: Soulcast.hpp  TestGame.cpp  TestGame.hpp  main.cpp
src/Engine/Audio/: Audio.hpp
src/Engine/Core/: CPU.hpp  SoulcastEngine.cpp  SoulcastEngine.hpp
src/Engine/Graphics/: Drawing.cpp  Drawing.hpp  Palette.cpp  Palette.hpp
src/Engine/Input/: Input.cpp  Input.hpp
test/: test0.asm
test/Assembly/: hello.sasm
test/Sandbox/: .nekoproj
test/Sandbox/Data/Music/: smw.mid  untitled.mid
test/Sandbox/Data/Palettes/: mario.pal  mariobg.pal  palacebg.pal  sonic.pal  switch.pal  test.pal
test/Sandbox/Data/Scripts/: Game.lua  Main.lua  Neko.lua  Test.lua  test.lua
test/Sandbox/Data/Scripts/Actors/: Mario.lua
test/Waves/Data/Objects/: Ring.soul
test/Waves/Data/Palettes/: pico8.pal
test/Waves/Data/Scripts/: Collision.soul
test/Waves/Data/Sprites/: Mario.ase
